// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationDeploymentHighlights with an app selected ApplicationDeploymentHighlights renders correctly with an app selected. 1`] = `
<div
  id="DeploymentHighlights"
>
  <div
    id="ApplicationDeploymentHighlightsTerminology"
  >
    <article
      className="pf-c-card pf-m-expanded"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <div
        className="pf-c-card__header makeStyles-header-1"
        onClick={[Function]}
      >
        <div
          className="pf-c-card__header-toggle"
        >
          <button
            aria-disabled={false}
            aria-expanded={true}
            aria-label="Toggle details"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            id="toggle-button"
            onClick={[Function]}
            role={null}
            type="button"
          >
            <span
              className="pf-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="pf-c-card__title"
        >
          Learn more about the terminology
        </div>
      </div>
      <div
        className="pf-c-card__expandable-content makeStyles-body-2"
      >
        <div
          className="pf-c-card__body"
        >
          <div
            className="terminology-item"
          >
            <p
              className="deployment-highlights-terminology-title"
            >
              Subscriptions
            </p>
            <p
              className="deployment-highlights-terminology-content"
            >
              Subscriptions identify Kubernetes resources within channels (source repositories). Then, the subscription places the Kubernetes resources on the target clusters.
            </p>
          </div>
          <div
            className="terminology-item"
          >
            <p
              className="deployment-highlights-terminology-title"
            >
              Placement rules
            </p>
            <p
              className="deployment-highlights-terminology-content"
            >
              Placement rules define the target clusters where subscriptions are delivered. This is done by cluster name, cluster resource annotation(s), or cluster resource label(s).
            </p>
          </div>
          <div
            className="terminology-item"
          >
            <p
              className="deployment-highlights-terminology-title"
            >
              Channels
            </p>
            <p
              className="deployment-highlights-terminology-content"
            >
              Channels point to repositories where Kubernetes resources are stored, such as Git, Helm chart, or object storage repositories, or Namespaces on the local cluster. Channels support multiple subscriptions from multiple targets.
            </p>
          </div>
          <div
            className="deployment-highlights-terminology-docs"
          >
            <a
              href="https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/2.4/html/applications/managing-applications"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                className="deployment-highlights-terminology-docs-text"
              >
                View documentation
              </span>
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                className="details-item-link-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>
`;

exports[`ApplicationDeploymentHighlights with no app ApplicationDeploymentHighlights with no app renders correctly. 1`] = `
<div
  id="DeploymentHighlights"
>
  <div
    id="ApplicationDeploymentHighlightsTerminology"
  >
    <article
      className="pf-c-card pf-m-expanded"
      data-ouia-component-id="OUIA-Generated-Card-2"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <div
        className="pf-c-card__header makeStyles-header-1"
        onClick={[Function]}
      >
        <div
          className="pf-c-card__header-toggle"
        >
          <button
            aria-disabled={false}
            aria-expanded={true}
            aria-label="Toggle details"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            id="toggle-button"
            onClick={[Function]}
            role={null}
            type="button"
          >
            <span
              className="pf-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="pf-c-card__title"
        >
          Learn more about the terminology
        </div>
      </div>
      <div
        className="pf-c-card__expandable-content makeStyles-body-2"
      >
        <div
          className="pf-c-card__body"
        >
          <div
            className="terminology-item"
          >
            <p
              className="deployment-highlights-terminology-title"
            >
              Subscriptions
            </p>
            <p
              className="deployment-highlights-terminology-content"
            >
              Subscriptions identify Kubernetes resources within channels (source repositories). Then, the subscription places the Kubernetes resources on the target clusters.
            </p>
          </div>
          <div
            className="terminology-item"
          >
            <p
              className="deployment-highlights-terminology-title"
            >
              Placement rules
            </p>
            <p
              className="deployment-highlights-terminology-content"
            >
              Placement rules define the target clusters where subscriptions are delivered. This is done by cluster name, cluster resource annotation(s), or cluster resource label(s).
            </p>
          </div>
          <div
            className="terminology-item"
          >
            <p
              className="deployment-highlights-terminology-title"
            >
              Channels
            </p>
            <p
              className="deployment-highlights-terminology-content"
            >
              Channels point to repositories where Kubernetes resources are stored, such as Git, Helm chart, or object storage repositories, or Namespaces on the local cluster. Channels support multiple subscriptions from multiple targets.
            </p>
          </div>
          <div
            className="deployment-highlights-terminology-docs"
          >
            <a
              href="https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/2.4/html/applications/managing-applications"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                className="deployment-highlights-terminology-docs-text"
              >
                View documentation
              </span>
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                className="details-item-link-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>
`;

exports[`ApplicationDeploymentHighlights with no app selection ApplicationDeploymentHighlights renders correctly when no app is selected. 1`] = `
<div
  id="DeploymentHighlights"
>
  <div
    id="ApplicationDeploymentHighlightsTerminology"
  >
    <article
      className="pf-c-card pf-m-expanded"
      data-ouia-component-id="OUIA-Generated-Card-3"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <div
        className="pf-c-card__header makeStyles-header-1"
        onClick={[Function]}
      >
        <div
          className="pf-c-card__header-toggle"
        >
          <button
            aria-disabled={false}
            aria-expanded={true}
            aria-label="Toggle details"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            id="toggle-button"
            onClick={[Function]}
            role={null}
            type="button"
          >
            <span
              className="pf-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="pf-c-card__title"
        >
          Learn more about the terminology
        </div>
      </div>
      <div
        className="pf-c-card__expandable-content makeStyles-body-2"
      >
        <div
          className="pf-c-card__body"
        >
          <div
            className="terminology-item"
          >
            <p
              className="deployment-highlights-terminology-title"
            >
              Subscriptions
            </p>
            <p
              className="deployment-highlights-terminology-content"
            >
              Subscriptions identify Kubernetes resources within channels (source repositories). Then, the subscription places the Kubernetes resources on the target clusters.
            </p>
          </div>
          <div
            className="terminology-item"
          >
            <p
              className="deployment-highlights-terminology-title"
            >
              Placement rules
            </p>
            <p
              className="deployment-highlights-terminology-content"
            >
              Placement rules define the target clusters where subscriptions are delivered. This is done by cluster name, cluster resource annotation(s), or cluster resource label(s).
            </p>
          </div>
          <div
            className="terminology-item"
          >
            <p
              className="deployment-highlights-terminology-title"
            >
              Channels
            </p>
            <p
              className="deployment-highlights-terminology-content"
            >
              Channels point to repositories where Kubernetes resources are stored, such as Git, Helm chart, or object storage repositories, or Namespaces on the local cluster. Channels support multiple subscriptions from multiple targets.
            </p>
          </div>
          <div
            className="deployment-highlights-terminology-docs"
          >
            <a
              href="https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/2.4/html/applications/managing-applications"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                className="deployment-highlights-terminology-docs-text"
              >
                View documentation
              </span>
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                className="details-item-link-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>
`;
